--- a/snapbuy_more.html
+++ b/snapbuy_more.html
@@ -12,12 +12,12 @@
 </head>
 <section id="sec3">
   <nav>
-    <a href="homepage.html" class="rotate-hover">
+    <a href="index.html" class="rotate-hover">
       <img src="images/logo.png" class="rotate-logo">
     </a>
     <div class="nav-menu">
       <ul>
-        <li><a class="active" href="homepage.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a class="active" href="portfolio.html">Portfolio</a></li>
         <li><a class="active" href="about.html">About</a></li>
         <li><a href="temp.html">Contacts</a></li>
