--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta name="viewport" content="with=device-width, inital-scale=1.0" <title>Justin Ho's Portfolio</title>
+  <meta name="viewport" content="with=device-width, inital-scale=1.0">
   <link rel="stylesheet" href="portcss.css" />
   <!-- google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
